--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,4 +5,4 @@ george_pick:
   linkedin: "george-pickering-59524a116"
   github: "bigpick"
   gitlab: "bigpick"
-  avatar: dracula_head.svg
+  avatar: person.svg
